Final cleanup: Secure secrets and ignore build files

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,11 @@ client/build
 server/uploads
 server/converted
 server/sessions
+
+# Secrets & Login Data (CRITICAL)
 server/tokens.json
+tokens.json
+server/.env    <-- THIS IS THE NEW LINE
 
 # System files
 .DS_Store
-.env
