--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
     "archiver": "^7.0.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
@@ -26,6 +27,7 @@
     "session-file-store": "^1.5.0",
     "sharp": "^0.34.4",
     "unzipper": "^0.12.3",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "yauzl": "^3.2.0"
   }
 }
